apps/dssp-targetnode-16/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dssp-targetnode-16
  namespace: dev
  labels:
    app: dssp-targetnode-16
    backstage.io/kubernetes-id: dssp-targetnode-16
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dssp-targetnode-16
  template:
    metadata:
      labels:
        app: dssp-targetnode-16
        backstage.io/kubernetes-id: dssp-targetnode-16
        environment: dev
    spec:
      containers:
        - name: dssp-targetnode-16
          image: chaitanyapandeygspann/dssp-targetnode-16:1.0.2
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
