apps/dssp-targetnode-16/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dssp-targetnode-16
  namespace: dev
  labels:
    backstage.io/kubernetes-id: dssp-targetnode-16
spec:
  selector:
    app: dssp-targetnode-16
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
